--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_YOUTUBE_API_KEY ='AIzaSyCireeHtoxMPJ7g6I9VKKbUVuDQ82MFpiM'
+VITE_YOUTUBE_API_KEY =
+
+# AIzaSyCeArZQrik3Kz1QAsisLTtvNrn5v_vvmeI
